--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-11.0, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
+        os: [windows-latest, macos-latest, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
         flutter_channel: [dev]
         include:
           - os: ubuntu-20.04
@@ -26,7 +26,7 @@ jobs:
           - os: windows-latest
             device: windows
             setup-script: flutter config --enable-windows-desktop
-          - os: macos-11.0
+          - os: macos-latest
             device: macos
             setup-script: |-
               flutter config --enable-macos-desktop
