macos distribution setting. change job matrix setting. (#70)
* mild upgrade deps
* TEAM, bundle id
* set LSApplicationCategoryType
* bump macosx deployment target
* specify Podfile platform as osx 10.15. See: https://docs.github.com/ja/actions/using-github-hosted-runners/about-github-hosted-runners
* bump xcode project ducument format version
* add script for distribution
* fix job matrix
* use ubuntu-20.04 on job
* fix xcode project file
* update podile lock

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -34,8 +34,8 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
-        flutter_channel: [dev, beta]
+        os: [windows-latest, macos-10.15, ubuntu-20.04]
+        flutter_channel: [dev]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
