--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -17,11 +17,11 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, windows-latest, macos-10.15]
         flutter_channel: [dev, beta]
-        mode: [debug, release]
+        mode: [release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             subcommand: linux
             setup-script: |-
               flutter config --enable-linux-desktop
@@ -32,7 +32,7 @@ jobs:
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
             distribution_path: build/windows/runner/_mode_
-          - os: macos-latest
+          - os: macos-10.15
             subcommand: macos
             setup-script: |-
               flutter config --enable-macos-desktop
