--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -14,10 +14,10 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest] # TODO: https://github.com/sensuikan1973/pedax/issues/7
-        flutter_channel: [dev, beta]
+        os: [windows-latest, macos-10.15, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
+        flutter_channel: [dev]
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             device: linux
             setup-script: |-
               sudo apt-get update -y
@@ -26,7 +26,7 @@ jobs:
           - os: windows-latest
             device: windows
             setup-script: flutter config --enable-windows-desktop
-          - os: macos-latest
+          - os: macos-10.15
             device: macos
             setup-script: |-
               flutter config --enable-macos-desktop
