--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -25,7 +25,7 @@ jobs:
             subcommand: linux
             setup-script: |-
               flutter config --enable-linux-desktop
-              sudo apt-get update
+              sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
             post-build-script: echo "nothing"
             distribution_path: build/linux/x64/_mode_
@@ -36,10 +36,7 @@ jobs:
             distribution_path: build/windows/runner/_mode_
           - os: macos-10.15
             subcommand: macos
-            setup-script: |-
-              flutter config --enable-macos-desktop
-              rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
-              flutter precache --force
+            setup-script: flutter config --enable-macos-desktop
             post-build-script: echo "nothing"
             distribution_path: build/macos/Build/Products/_mode_
 
