--- a/.github/workflows/distribute.yaml
+++ b/.github/workflows/distribute.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   create_msix:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
