--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [ubuntu-20.04, windows-latest, macos-10.15]
+        os: [ubuntu-20.04, windows-2019, macos-10.15]
         flutter_channel: [dev, beta]
         mode: [release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
@@ -29,7 +29,7 @@ jobs:
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
             post-build-script: echo "nothing"
             distribution_path: build/linux/x64/_mode_
-          - os: windows-latest
+          - os: windows-2019
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
             post-build-script: flutter pub run msix:create
