--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-10.15, ubuntu-20.04]
+        os: [windows-2019, macos-10.15, ubuntu-20.04]
         flutter_channel: [dev]
     steps:
       - uses: actions/checkout@v2
