--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-10.15, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
+        os: [windows-2019, macos-10.15, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
         flutter_channel: [dev]
         include:
           - os: ubuntu-20.04
@@ -23,7 +23,7 @@ jobs:
               sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
               flutter config --enable-linux-desktop
-          - os: windows-latest
+          - os: windows-2019
             device: windows
             setup-script: flutter config --enable-windows-desktop
           - os: macos-10.15
