--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -27,17 +27,14 @@ jobs:
               flutter config --enable-linux-desktop
               sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
-            post-build-script: echo "nothing"
             distribution_path: build/linux/x64/_mode_
           - os: windows-2019
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
-            post-build-script: flutter pub run msix:create
             distribution_path: build/windows/runner/_mode_
           - os: macos-10.15
             subcommand: macos
             setup-script: flutter config --enable-macos-desktop
-            post-build-script: echo "nothing"
             distribution_path: build/macos/Build/Products/_mode_
 
     steps:
@@ -52,9 +49,7 @@ jobs:
       - name: doctor
         run: flutter doctor -v
       - name: build
-        run: flutter build ${{ matrix.subcommand }} --${{ matrix.mode }} --verbose
-      - name: post build
-        run: ${{ matrix.post-build-script }}
+        run: flutter build ${{ matrix.subcommand }} --${{ matrix.mode }}
 
       - name: set output path
         shell: bash
