--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,10 +74,11 @@ flutter:
 # See: https://pub.dev/packages/msix#configuration-optional
 msix_config:
   display_name: pedax
-  publisher_display_name: Naoki Shimizu
-  # publisher: changeme
-  # identity_name: changeme
+  # publisher_display_name: aaa
+  # publisher: CN=My Company, O=My Company, L=Berlin, S=Berlin, C=DE
+  # identity_name: pedax
   # msix_version: 1.0.0.0
+  # certificate_path: pedax.pfx
   architecture: x64
   # See https://docs.microsoft.com/en-us/windows/uwp/packaging/app-capability-declarations
-  # capabilities: "internetClient"
+  # capabilities: "xxx" # unnecessary
