--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -34,7 +34,7 @@ jobs:
             setup-script: flutter config --enable-windows-desktop
             postbuild-script: |-
               # See: https://flutter.dev/desktop#windows
-              target_dll_path=/c/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Redist/MSVC/14.28.29325/x64/Microsoft.VC142.CRT
+              target_dll_path="/c/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Redist/MSVC/14.28.29325/x64/Microsoft.VC142.CRT"
               cp $target_dll_path/vcruntime140.dll build/windows/runner/Relelease/vcruntime140.dll
               cp $target_dll_path/vcruntime140_1.dll build/windows/runner/Relelease/vcruntime140_1.dll
               cp $target_dll_path/msvcp140.dll build/windows/runner/Relelease/msvcp140.dll
