--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -28,7 +28,7 @@ jobs:
               sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
             postbuild-script: echo "do nothing"
-            distribution_path: build/linux/x64/_mode_
+            distribution_path: build/linux/x64/release
           - os: windows-2019
             subcommand: windows
             setup-script: flutter config --enable-windows-desktop
@@ -38,12 +38,12 @@ jobs:
               cp "$target_dll_path/vcruntime140.dll" build/windows/runner/Release/
               cp "$target_dll_path/vcruntime140_1.dll" build/windows/runner/Release/
               cp "$target_dll_path/msvcp140.dll" build/windows/runner/Release/
-            distribution_path: build/windows/runner/_mode_
+            distribution_path: build/windows/runner/Release
           - os: macos-10.15
             subcommand: macos
             setup-script: flutter config --enable-macos-desktop
             postbuild-script: echo "do nothing"
-            distribution_path: build/macos/Build/Products/_mode_
+            distribution_path: build/macos/Build/Products/release
 
     steps:
       - uses: actions/checkout@v2
@@ -62,14 +62,14 @@ jobs:
         shell: bash
         run: ${{ matrix.postbuild-script }}
 
-      - name: set output path
-        shell: bash
-        run: |-
-          path=$(echo ${{ matrix.distribution_path }} | sed -e 's/_mode_/${{ matrix.mode }}/g')
-          echo "artifact_target=$path" >> $GITHUB_ENV
+      # - name: set output path
+      #   shell: bash
+      #   run: |-
+      #     path=$(echo ${{ matrix.distribution_path }} | sed -e 's/_mode_/${{ matrix.mode }}/g')
+      #     echo "artifact_target=$path" >> $GITHUB_ENV
 
       - name: output build info
-        run: .github/scripts/output_build_info.sh ${{ env.artifact_target }}
+        run: .github/scripts/output_build_info.sh ${{ matrix.distribution_path }}
 
       # - name: debug
       #   uses: mxschmitt/action-tmate@v3
@@ -77,4 +77,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: pedax-${{ runner.os }}-${{ matrix.mode }}
-          path: ${{ env.artifact_target }}
+          path: ${{ matrix.distribution_path }}
