--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   macos_secure_bookmarks: ^0.2.0
   path_provider: ^2.0.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0
-  shared_preferences: ^2.0.3
+  shared_preferences: ^2.0.4
   window_size:
     git:
       # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/window_size
@@ -58,6 +58,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  msix: ^0.2.2-nullsafety.0 # See: https://flutter.dev/desktop#windows
   pedantic_sensuikan1973: any
 
 flutter:
@@ -69,3 +70,15 @@ flutter:
     - assets/images/
     - assets/libedax/data/
     - assets/libedax/dll/
+
+# See: https://pub.dev/packages/msix#configuration-optional
+msix_config:
+  display_name: pedax
+  # publisher_display_name: aaa
+  # publisher: CN=My Company, O=My Company, L=Berlin, S=Berlin, C=DE
+  # identity_name: pedax
+  # msix_version: 1.0.0.0
+  # certificate_path: pedax.pfx
+  architecture: x64
+  # See https://docs.microsoft.com/en-us/windows/uwp/packaging/app-capability-declarations
+  # capabilities: "xxx" # unnecessary
