--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [windows-latest, macos-10.15, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
+        os: [windows-2019, macos-10.15, ubuntu-20.04] # TODO: https://github.com/sensuikan1973/pedax/issues/7
         flutter_channel: [dev]
         include:
           - os: ubuntu-20.04
@@ -23,15 +23,12 @@ jobs:
               sudo apt-get update -y
               sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev
               flutter config --enable-linux-desktop
-          - os: windows-latest
+          - os: windows-2019
             device: windows
             setup-script: flutter config --enable-windows-desktop
           - os: macos-10.15
             device: macos
-            setup-script: |-
-              flutter config --enable-macos-desktop
-              rm -rf ${FLUTTER_HOME}/bin/cache/artifacts/engine/darwin-x64* # See: https://github.com/flutter/flutter/issues/77173#issuecomment-790936689
-              flutter precache --force
+            setup-script: flutter config --enable-macos-desktop
 
     steps:
       - uses: actions/checkout@v2
@@ -45,4 +42,4 @@ jobs:
       - name: doctor
         run: flutter doctor -v
       - name: drive
-        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }} --verbose
+        run: flutter drive --driver integration_test/driver.dart --target integration_test/app_test.dart -d ${{ matrix.device }}
