--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -43,6 +43,7 @@ jobs:
         with:
           channel: ${{ matrix.flutter_channel }}
       - name: setup
+        shell: bash
         run: ${{ matrix.setup_script }}
       - name: install dependencies
         run: flutter pub get
