--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -33,6 +33,7 @@ jobs:
         with:
           channel: ${{ matrix.flutter_channel }}
       - name: setup
+        shell: bash
         run: ${{ matrix.setup_script }}
       - name: install dependencies
         run: flutter pub get
