--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,26 +1,22 @@
-# NOTE: Experimental Job. See: https://flutter.dev/desktop#distribution
-# REF: https://github.com/google/flutter-desktop-embedding/blob/master/.github/workflows/ci.yml
-
-name: Flutter Build
+name: Publish pedax app
 
 on:
-  pull_request:
-    paths: ['**.dart','pubspec.*', '.github/workflows/flutter_build.yaml', 'macos/**', 'linux/**', 'windows/**', 'assets/**']
-  push:
-    branches: [main]
-    paths: ['**.dart','pubspec.*', '.github/workflows/flutter_build.yaml', 'macos/**', 'linux/**', 'windows/**', 'assets/**']
+  workflow_dispatch:
+    inputs:
+      tag: # TODO: consider to use https://pub.dev/packages/cider
+        description: 'semver'
+        required: true
 
 jobs:
-  build:
+  publish_artifacts:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
+    timeout-minutes: 30
     strategy:
-      fail-fast: false # I want results from all OSes even if one fails.
       matrix:
         os: [ubuntu-20.04, windows-2019, macos-10.15]
-        flutter_channel: [dev] # TODO: use beta in the future.
+        flutter_channel: [dev]
         mode: [release]
-        include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
+        include:
           - os: ubuntu-20.04
             subcommand: linux
             setup_script: .github/scripts/setup_on_linux.sh
@@ -55,20 +51,14 @@ jobs:
         shell: bash
         run: ${{ matrix.prepare_to_pack_script }}
 
-      # - name: set output path
-      #   shell: bash
-      #   run: |-
-      #     path=$(echo ${{ matrix.distribution_path }} | sed -e 's/_mode_/${{ matrix.mode }}/g')
-      #     echo "artifact_target=$path" >> $GITHUB_ENV
-
       - name: output build info
         shell: bash
         run: .github/scripts/output_build_info.sh ${{ matrix.distribution_path }}
 
-      # - name: debug
-      #   uses: mxschmitt/action-tmate@v3
-
-      - uses: actions/upload-artifact@v2
+      - uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: pedax-${{ runner.os }}
-          path: ${{ matrix.distribution_path }}
+          draft: true
+          tag_name: ${{ github.event.inputs.tag }}
+          files: ${{ matrix.distribution_path }}
