--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -62,7 +62,10 @@ jobs:
         run: mkdir -p ${{ env.PUBLISH_DIR }} && powershell Compress-Archive -Path ${{ matrix.distribution_path }} -DestinationPath ${{ env.PUBLISH_DIR }}/pedax-${{ runner.os }}.zip
       - name: compress files (macOS, Linux)
         if: runner.os == 'macOS' || runner.os == 'Linux'
-        run: mkdir -p ${{ env.PUBLISH_DIR }} && zip -r ${{ env.PUBLISH_DIR }}/pedax-${{ runner.os }}.zip ${{ matrix.distribution_path }}
+        run: |-
+          mkdir -p ${{ env.PUBLISH_DIR }}
+          cd ${{ matrix.distribution_path }}
+          zip -r $GITHUB_WORKSPACE/${{ env.PUBLISH_DIR }}/pedax-${{ runner.os }}.zip .
 
       - uses: softprops/action-gh-release@v1
         env:
