--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -62,7 +62,7 @@ jobs:
         run: |-
           mkdir -p ${{ env.PUBLISH_DIR }}
           cd ${{ matrix.distribution_path }}
-          powershell Compress-Archive -Path . -DestinationPath ${GITHUB_WORKSPACE}/${{ env.PUBLISH_DIR }}/pedax-${{ runner.os }}.zip
+          powershell Compress-Archive -Path . -DestinationPath $Env:GITHUB_WORKSPACE/${{ env.PUBLISH_DIR }}/pedax-${{ runner.os }}.zip
       - name: compress files (macOS, Linux)
         if: runner.os == 'macOS' || runner.os == 'Linux'
         run: |-
