--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,7 +89,7 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.done.sensuikan1973.pedax" "\0"
+            VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "othello Board GUI with edax." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "pedax" "\0"
