--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
+    timeout-minutes: 20
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
@@ -65,8 +65,8 @@ jobs:
         shell: bash
         run: .github/scripts/output_build_info.sh ${{ matrix.distribution_path }}
 
-      # - name: debug
-      #   uses: mxschmitt/action-tmate@v3
+      - name: debug
+        uses: mxschmitt/action-tmate@v3
 
       - uses: actions/upload-artifact@v2
         with:
