--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ issue_tracker: https://github.com/sensuikan1973/pedax/issues
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.1.0-alpha.1+1
+version: 0.2.0-alpha.0+1
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: '>=2.12.0 <3.0.0'
@@ -35,17 +35,17 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  font_awesome_flutter: ^9.0.0-nullsafety
+  font_awesome_flutter: ^9.0.0
   intl: ^0.17.0
   libedax4dart: ^0.6.0-beta.1
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
     #   ref: xxx
-  logger: ^1.0.0-nullsafety.0
+  logger: ^1.0.0
   macos_secure_bookmarks: ^0.2.0
   path_provider: ^2.0.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^5.0.0
-  shared_preferences: ^2.0.4
+  shared_preferences: ^2.0.5
   window_size:
     git:
       # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/window_size
