--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -74,7 +74,20 @@ jobs:
       - name: generate release description file
         run: |-
           # See: https://docs.github.com/ja/actions/reference/environment-variables
-          echo "This is created by $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID." > ${{ env.RELEASE_DESCRIPTION_TXT_FILE }}
+          cat << EOF > ${{ env.RELEASE_DESCRIPTION_TXT_FILE }}
+            ## Changes
+
+            ### All OSes
+
+            ### MacOS
+
+            ### Windows
+
+            ### Linux
+
+            ---
+            This is created by $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID.
+          EOF
 
       - uses: softprops/action-gh-release@v1
         env:
