first implement website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "activityBar.foreground": "#000000"
   },
   "files.associations": {
-    "*.arb": "json"
+    "*.arb": "json",
+    "*.mdx": "markdown"
   }
 }
