--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -15,7 +15,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: yarn install
+    - name: git config
+      run: |-
+        git config --global user.email "actions@github.com"
+        git config --global user.name "gh-actions"
+    - run: yarn install --frozen-lockfile
     - run: yarn deploy
       env:
         GIT_USER: ${{ github.actor }}:${{ github.token }}
