--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -23,6 +23,7 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
     - run: yarn install --frozen-lockfile
+    - run: yarn run build
     - run: yarn deploy
       env:
         GIT_USER: ${{ github.actor }}:${{ github.token }}
