--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -1,3 +1,5 @@
+# See: https://docusaurus.io/docs/deployment#deploying-to-github-pages
+
 name: Deploy Website
 
 on:
@@ -23,7 +25,6 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
     - run: yarn install --frozen-lockfile
-    - run: yarn run build
-    - run: yarn deploy
+    - run: npm run deploy
       env:
         GIT_USER: ${{ github.actor }}:${{ github.token }}
