add icon image on appbar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,5 +66,6 @@ flutter:
 
   # See: https://flutter.dev/docs/development/ui/assets-and-images
   assets:
+    - assets/images/
     - assets/libedax/data/
     - assets/libedax/dll/
