--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -7,6 +7,7 @@ on:
     paths: ['.github/workflows/deploy_website.yaml']
   push:
     branches: [main]
+    paths: ['.github/workflows/deploy_website.yaml', 'website/**']
 
 jobs:
   deploy:
