--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -85,6 +85,8 @@ jobs:
           ### Windows
 
           ### Linux
+          
+          ### Website
 
           ---
           This is created by $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID.
