fix copyright on macos

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = pedax
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.pedax
+PRODUCT_BUNDLE_IDENTIFIER = com.done.sensuikan1973.pedax
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2021 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2021 com.done.sensuikan1973. All rights reserved.
