--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   format:
     runs-on: ubuntu-20.04
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -19,6 +20,7 @@ jobs:
 
   analyze:
     runs-on: ubuntu-20.04
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
