--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   intl: ^0.17.0
   libedax4dart: ^0.7.0-beta.0
+    # git:
+    #   url: https://github.com/sensuikan1973/libedax4dart.git
+    #   ref: xxx
   logger: ^1.0.0
   macos_secure_bookmarks: ^0.2.0
   path_provider: ^2.0.1 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
@@ -55,11 +58,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  msix:
-    git:
-      # See: https://github.com/YehudaKremer/msix/issues/35
-      url: git://github.com/sensuikan1973/msix
-      ref: support_ja_jp_temporary_branch
+  msix: ^1.0.3
   pedantic_sensuikan1973: any
 
 flutter:
