--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ msix_config:
   identity_name: 1781NaokiShimizu.pedax
   msix_version: 0.4.4.0
   publisher: CN=4CCE9711-39B6-4ECC-AA74-A350014A69B0
+  languages: en, ja
   # logo_path: C:\<PathToIcon>\<Logo.png>
   # start_menu_icon_path: C:\<PathToIcon>\<Icon.png>
   # tile_icon_path: C:\<PathToIcon>\<Icon.png>
