--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,4 +84,4 @@ msix_config:
   # vs_generated_images_folder_path: C:\<PathToFolder>\Images
   # icons_background_color: transparent (or some color like: '#ffffff')
   architecture: x64
-  # capabilities: 'internetClient,location,microphone,webcam'
+  capabilities: ''
