--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,10 +78,10 @@ msix_config:
   msix_version: 0.4.4.0
   publisher: CN=4CCE9711-39B6-4ECC-AA74-A350014A69B0
   languages: en, ja
-  # logo_path: C:\<PathToIcon>\<Logo.png>
-  # start_menu_icon_path: C:\<PathToIcon>\<Icon.png>
-  # tile_icon_path: C:\<PathToIcon>\<Icon.png>
+  logo_path: assets/images/pedax_logo.png
+  start_menu_icon_path: assets/images/pedax_logo.png
+  tile_icon_path: assets/images/pedax_logo.png
   # vs_generated_images_folder_path: C:\<PathToFolder>\Images
   # icons_background_color: transparent (or some color like: '#ffffff')
   architecture: x64
-  # capabilities: 'internetClient,location,microphone,webcam'
+  capabilities: ''
