--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -23,6 +23,7 @@ jobs:
       with:
         node-version: '12.x'
     - run: |-
+        # See: https://github.com/actions-user
         git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
     - run: yarn install --frozen-lockfile
