mild fix comment

--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -1,4 +1,4 @@
-# NOTE: Experimental Job. See: https://flutter.dev/desktop#distribution
+# See: https://flutter.dev/desktop#distribution
 # REF: https://github.com/google/flutter-desktop-embedding/blob/master/.github/workflows/ci.yml
 
 name: Flutter Build
