--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
   "files.associations": {
     "*.arb": "json",
     "*.mdx": "markdown"
-  }
+  },
+  "dart.sdkPaths": ["~/development/flutter/bin/dart"]
 }
