--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ version: 0.5.1-beta+6
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ^2.0.0
+  flutter: ^2.2.0-0
 
 dependencies:
   cupertino_icons: ^1.0.2
@@ -36,7 +36,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   font_awesome_flutter: ^9.0.0
-  intl: ^0.17.0
+  intl: any # Use the pinned version from flutter_localizations
   libedax4dart: ^0.7.0-beta.0
     # git:
     #   url: https://github.com/sensuikan1973/libedax4dart.git
