add trigger path

--- a/.github/workflows/flutter_integration_test.yaml
+++ b/.github/workflows/flutter_integration_test.yaml
@@ -2,10 +2,10 @@ name: Flutter Integration Test
 
 on:
   pull_request:
-    paths: ['**.dart', 'pubspec.*', '.github/workflows/flutter_integration_test.yaml', '.github/scripts/**', 'macos/**', 'linux/**', 'windows/**', 'assets/**']
+    paths: ['**.dart', 'pubspec.*', '.github/workflows/flutter_integration_test.yaml', '.github/scripts/**', 'macos/**', 'linux/**', 'windows/**', 'assets/**', '.libedax_assets_tag']
   push:
     branches: [main]
-    paths: ['**.dart', 'pubspec.*', '.github/workflows/flutter_integration_test.yaml', '.github/scripts/**', 'macos/**', 'linux/**', 'windows/**', 'assets/**']
+    paths: ['**.dart', 'pubspec.*', '.github/workflows/flutter_integration_test.yaml', '.github/scripts/**', 'macos/**', 'linux/**', 'windows/**', 'assets/**', '.libedax_assets_tag']
 
 jobs:
   integration_test:
