--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,8 @@ flutter:
     - assets/libedax/data/
     - assets/libedax/dll/
 
-msix_config:
+msix_config: # See: https://pub.dev/packages/msix#mag-configuration-optional
+  store: true # See: https://pub.dev/packages/msix#label-windows-store
   display_name: pedax
   publisher_display_name: Naoki Shimizu
   identity_name: 1781NaokiShimizu.pedax
