--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,11 +72,12 @@ flutter:
     - assets/libedax/data/
     - assets/libedax/dll/
 
-msix_config:
+msix_config: # See: https://pub.dev/packages/msix#mag-configuration-optional
+  store: true # See: https://pub.dev/packages/msix#label-windows-store
   display_name: pedax
   publisher_display_name: Naoki Shimizu
   identity_name: 1781NaokiShimizu.pedax
-  msix_version: 0.5.1.0
+  msix_version: 0.7.0.0
   publisher: CN=4CCE9711-39B6-4ECC-AA74-A350014A69B0
   languages: en, ja
   logo_path: assets/images/pedax_logo.png
