--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   flutter: ^2.2.0-0
 
 dependencies:
+  crypto: ^3.0.0
   cupertino_icons: ^1.0.3
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
   file_selector: ^0.8.2
@@ -70,6 +71,7 @@ flutter:
   assets:
     - assets/images/
     - assets/libedax/data/
+    - assets/libedax/dll/
 
 msix_config: # See: https://pub.dev/packages/msix#mag-configuration-optional
   store: true # See: https://pub.dev/packages/msix#label-windows-store
