--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ version: 0.8.1-beta+9
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ^2.2.0-0
+  flutter: ^2.2.0-0 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
   crypto: ^3.0.1
