--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,10 @@ version: 0.8.1-beta+9
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ^2.2.0-0
+  flutter: ^2.2.0-0 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
-  crypto: ^3.0.0
+  crypto: ^3.0.1
   cupertino_icons: ^1.0.3
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
   file_selector: ^0.8.2
