deploy when only workflow dispatch

--- a/.github/workflows/deploy_app_store.yaml
+++ b/.github/workflows/deploy_app_store.yaml
@@ -66,4 +66,5 @@ jobs:
       - name: build
         run: fastlane build_for_app_store
       - name: deploy
+        if: ${{ GITHUB_EVENT_NAME }} == "workflow_dispatch"
         run: fastlane deploy_app_store
