--- a/.github/workflows/deploy_app_store.yaml
+++ b/.github/workflows/deploy_app_store.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: setup fastlane
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 'head'
+          ruby-version: '2.7.2'
           bundler-cache: true
           working-directory: macos
 
