--- a/.github/workflows/deploy_app_store.yaml
+++ b/.github/workflows/deploy_app_store.yaml
@@ -66,5 +66,6 @@ jobs:
       - name: build
         run: fastlane build_for_app_store
       - name: deploy
+        # See: https://docs.github.com/en/actions/reference/environment-variables#default-environment-variables
         if: ${{ GITHUB_EVENT_NAME }} == "workflow_dispatch"
         run: fastlane deploy_app_store
