fix working dir

--- a/.github/workflows/deploy_app_store.yaml
+++ b/.github/workflows/deploy_app_store.yaml
@@ -56,7 +56,7 @@ jobs:
         shell: bash
         run: .github/scripts/output_build_info.sh . && cat env.txt
 
-      - name: setup fastlane
+      - name: setup ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7.2'
@@ -64,8 +64,12 @@ jobs:
           working-directory: macos
 
       - name: build
+        with:
+          working-directory: macos
         run: fastlane build_for_app_store
       - name: deploy
+        with:
+          working-directory: macos
         # See: https://docs.github.com/en/actions/reference/environment-variables#default-environment-variables
         if: ${{ env.GITHUB_EVENT_NAME }} == "workflow_dispatch"
         run: fastlane deploy_app_store
